@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-09-30T00:55:00Z",
+  "timestamp" : "2024-10-02T00:53:12Z",
   "count_outdated" : 1329,
   "uniques_outdated" : 854,
-  "count" : 1333,
-  "uniques" : 858,
+  "count" : 1334,
+  "uniques" : 859,
   "clones" : [
     {
       "timestamp": "2024-09-18T00:00:00Z",
@@ -34,6 +34,15 @@
     },
     {
       "timestamp": "2024-09-26T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-10-01T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
