@@ -1,6 +1,6 @@
 {
-  "count": 4,
-  "uniques": 2,
+  "count": 5,
+  "uniques": 3,
   "clones": [
     {
       "timestamp": "2024-09-18T00:00:00Z",
@@ -19,6 +19,11 @@
     },
     {
       "timestamp": "2024-09-26T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-10-01T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
