@@ -1,3 +1,12 @@
+2024-10-02T00:53:12Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11135904212 # 436
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-02
+* notice: last 14d: unq all: 3 5
+* notice: prev accum: outdated-unq outdated-all / unq all: 854 1329 / 858 1333
+* notice: next accum: outdated-unq outdated-all / unq all: 854 1329 / 859 1334
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-10-01]
+
 2024-09-30T00:55:00Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11097447765 # 434
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-30
